--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,6 @@ jobs:
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
-
       mariadb:
         image: mariadb:10.5
         env:
@@ -23,7 +22,6 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 3
-
     strategy:
       fail-fast: false
       matrix:
@@ -46,14 +44,13 @@ jobs:
           - moodle-branch: 'MOODLE_405_STABLE'
             php: '8.3'
             database: 'pgsql'
-
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
         with:
           path: plugin
 
-      - name: Install Node.js
+      - name: Install node
         uses: actions/setup-node@v1
         with:
           node-version: '14.15.0'
@@ -68,17 +65,13 @@ jobs:
       - name: Deploy moodle-plugin-ci
         run: |
           composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^4
+          # Add dirs to $PATH
           echo $(cd ci/bin; pwd) >> $GITHUB_PATH
           echo $(cd ci/vendor/bin; pwd) >> $GITHUB_PATH
+          # PHPUnit depends on en_AU.UTF-8 locale
           sudo locale-gen en_AU.UTF-8
-
       - name: Install moodle-plugin-ci
-        run: |
-          if [ "${{ matrix.database }}" = "pgsql" ]; then
-            moodle-plugin-ci install -vvv --plugin ./plugin --db-host=postgres
-          else
-            moodle-plugin-ci install -vvv --plugin ./plugin --db-host=127.0.0.1
-          fi
+        run: moodle-plugin-ci install -vvv --plugin ./plugin --db-host=127.0.0.1
         env:
           DB: ${{ matrix.database }}
           MOODLE_BRANCH: ${{ matrix.moodle-branch }}
@@ -113,4 +106,8 @@ jobs:
 
       - name: Run phpunit
         if: ${{ always() }}
-        run: moodle-plugin-ci phpunit
+        run: |
+             moodle-plugin-ci phpunit
+             cd moodle
+             vendor/bin/phpunit --fail-on-risky --disallow-test-output --filter tool_dataprivacy_metadata_registry_testcase
+             vendor/bin/phpunit --fail-on-risky --disallow-test-output --testsuite core_privacy_testsuite --filter provider_testcase
