--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.15.0'
-
       - name: Setup PHP environment
         uses: shivammathur/setup-php@v2
         with:
@@ -65,13 +64,16 @@ jobs:
       - name: Deploy moodle-plugin-ci
         run: |
           composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^4
-          # Add dirs to $PATH
           echo $(cd ci/bin; pwd) >> $GITHUB_PATH
           echo $(cd ci/vendor/bin; pwd) >> $GITHUB_PATH
-          # PHPUnit depends on en_AU.UTF-8 locale
           sudo locale-gen en_AU.UTF-8
       - name: Install moodle-plugin-ci
-        run: moodle-plugin-ci install -vvv --plugin ./plugin --db-host=127.0.0.1
+        run: |
+          if [ "${{ matrix.database }}" = "pgsql" ]; then
+            moodle-plugin-ci install -vvv --plugin ./plugin --db-host=postgres
+          else
+            moodle-plugin-ci install -vvv --plugin ./plugin --db-host=127.0.0.1
+          fi
         env:
           DB: ${{ matrix.database }}
           MOODLE_BRANCH: ${{ matrix.moodle-branch }}
