--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,10 +69,11 @@ jobs:
           sudo locale-gen en_AU.UTF-8
       - name: Install moodle-plugin-ci
         run: |
+          set -x
           if [ "${{ matrix.database }}" = "pgsql" ]; then
-            moodle-plugin-ci install -vvv --plugin ./plugin --db-host=postgres
+          moodle-plugin-ci install -vvv --plugin ./plugin --db-host=postgres
           else
-            moodle-plugin-ci install -vvv --plugin ./plugin --db-host=127.0.0.1
+          moodle-plugin-ci install -vvv --plugin ./plugin --db-host=127.0.0.1
           fi
         env:
           DB: ${{ matrix.database }}
