--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Run all tests
 on: [push, pull_request]
 
 jobs:
-  setup:
+  test:
     runs-on: ubuntu-latest
     services:
       postgres:
